# blue-carbon-registry

./: .env.example  .gitignore  .vercelignore  ACHIEVEMENT_ANALYSIS.md  Anchor.toml  BLOCKCHAIN_INTEGRATION.md  CHANGELOG.md  DEPLOYMENT_FIX_GUIDE.md  DUMMY_DATA_REMOVAL_REPORT.md  FINAL_COMPLETION_REPORT.md  FINAL_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TODO.md  IPFS_INTEGRATION_SUCCESS.md  IPFS_LINKS_FIXED.md  MOBILE_IMPLEMENTATION_COMPLETE.md  MOBILE_RESPONSIVENESS_FIX.md  PROJECT_DETAIL_SYSTEM_SUCCESS.md  PROJECT_OWNERSHIP_MAPPING.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  UPLOAD_GUIDELINES_ADDED.md  blue_carbon_registry.json  initialize-system.js  package.json  project-completion-roadmap.md  tsconfig.json  validate-mobile.js  vercel.json  verification-system-design.md
.github/: DESCRIPTION  TOPICS
backend-bridge/: package.json
documents/: architecture-design.md
mobile-app/: App.tsx  app.json  index.js  package.json  test-mobile-app.js  tsconfig.json  tsconfig.tsbuildinfo  webpack.config.js
programs/blue-carbon-registry/: Cargo.toml
programs/blue-carbon-registry/src/: lib.rs  models.rs
programs/blue-carbon-registry/src/auth_utils/: access.rs  mod.rs  validation.rs
programs/blue-carbon-registry/src/instructions/: contexts.rs  errors.rs  marketplace.rs  mint_credits.rs  mod.rs  monitoring.rs  register_project.rs  track_impact.rs  trade_credits.rs  verify_project.rs
tests/: blue-carbon-registry.ts  integration.test.ts
web-app/: .env.example  .eslintrc.json  README.md  create-sample-ipfs-files.js  decode-projects.js  (+12 more)
(+130 files in other folders)
